# nrf52-dfu-ota-ble

./: README.md  README.rst
Firmware_1/: CMakeLists.txt
Firmware_1/src/: main.c
Firmware_10/: CMakeLists.txt
Firmware_10/src/: main.c
Firmware_11/: CMakeLists.txt
Firmware_11/src/: main.c
Firmware_12/: CMakeLists.txt  prj.conf
Firmware_12/src/: main.c
Firmware_2/: CMakeLists.txt  prj.conf
Firmware_2/src/: main.c
Firmware_3/: CMakeLists.txt
Firmware_3/src/: main.c
Firmware_4/: CMakeLists.txt  priv.pem
Firmware_4/src/: main.c
Firmware_5/: CMakeLists.txt  priv_2.pem  pub_1.c
Firmware_5/src/: main.c
Firmware_6/: CMakeLists.txt
Firmware_6/src/: main.c
Firmware_7/: CMakeLists.txt
Firmware_7/src/: main.c
Firmware_8/: CMakeLists.txt  prj.conf
Firmware_8/src/: main.c
Firmware_9/: CMakeLists.txt
Firmware_9/src/: main.c
Trash/: Pseudo code.txt
Trash/Firmware_1/: CMakeLists.txt
Trash/Firmware_1/src/: main.c
Trash/Firmware_2/: prj.conf
Trash/Firmware_2/src/: main.c
